<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/celeste_boton"
        android:paddingTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/toolbar"
        app:title="@string/app_name"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bordered_edittext"
                android:hint="@string/nombre"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bordered_edittext"
                android:hint="@string/apellidos"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/etDni"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bordered_edittext"
                android:hint="@string/dni"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bordered_edittext"
                android:hint="@string/telefono"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bordered_edittext"
                android:hint="@string/correo"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/etRepetirCorreo"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bordered_edittext"
                android:hint="@string/repetir_correo"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bordered_edittext"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/etRepetirPassword"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bordered_edittext"
                android:hint="@string/repetir_contrasena"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/etFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bordered_edittext"
                android:hint="@string/fecha_nacimiento"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <!-- Spinner para elegir rol -->
            <Spinner
                android:id="@+id/spinnerRol"
                android:layout_width="match_parent"

                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bordered_edittext"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <!-- Layout Médico -->
            <LinearLayout
                android:id="@+id/layoutMedico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/etIdMedico"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/bordered_edittext"
                    android:hint="@string/id_medico"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>
            </LinearLayout>

            <!-- Layout Paciente -->
            <LinearLayout
                android:id="@+id/layoutPaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/etVincularMedico"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/bordered_edittext"
                    android:hint="@string/id_vincular_medico"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>
            </LinearLayout>

            <!-- Layout Cuidador -->
            <LinearLayout
                android:id="@+id/layoutCuidador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/etVincularPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/bordered_edittext"
                    android:hint="@string/dni_vincular_paciente"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>

                <EditText
                    android:id="@+id/etPin"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bordered_edittext"
                    android:hint="@string/pin"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>
            </LinearLayout>

            <!-- Botón Guardar -->
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/celeste_boton"
                android:text="@string/guardar"
                android:textColor="@color/negro"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
