<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/celeste_boton"
        android:paddingTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/toolbar"
        app:title="@string/app_name"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bordered_edittext"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/hint_nombre" />

            <EditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bordered_edittext"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/hint_apellidos" />

            <EditText
                android:id="@+id/etdni"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bordered_edittext"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/dni" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bordered_edittext"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/hint_correo" />

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bordered_edittext"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/hint_telefono" />

            <EditText
                android:id="@+id/etNuevoPin"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bordered_edittext"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="numberPassword"
                android:hint="@string/hint_nuevo_pin" />

            <EditText
                android:id="@+id/etNuevaPassword"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bordered_edittext"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="textPassword"
                android:hint="@string/hint_nueva_password" />

            <EditText
                android:id="@+id/etPasswordActual"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bordered_edittext"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="textPassword"
                android:hint="@string/hint_password_actual" />


            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/celeste_boton"
                android:text="@string/btn_guardar"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnCerrarSesion"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/rojo_guardar"
                android:text="Cerrar sesión"
                android:textColor="@color/black" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
